# webp_server_rs

./: .gitattributes  .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  build.rs  config.json  webp-image.service  webpwrapper.c
debian-package/debian/: control
images/lossless/: .webp-conf
images/lossy/: .webp-conf
images/nearlossless/: .webp-conf
src/: main.rs
webpwrapper/: CMakeLists.txt  webpwrapper.c
