[package]
name = "webp-server-rs"
version = "0.2.0"
authors = ["Cocoa <0xbbc@0xbbc.com>"]
edition = "2018"
links = "libwebp"
build = "build.rs"

[dependencies]
crossbeam-channel = "0.4"
crossbeam-utils = "0.7"
getopts = "0.2"
glob = "0"
hyper = "0.13"
image = "0"
lazy_static = "1.4"
libc = "0.2"
num_cpus = "1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["sync", "fs", "macros"] }
walkdir = "2"

[profile.release]
opt-level = 'z'
lto = true
