[package]
name = "webp-server-rs"
version = "0.4.0"
authors = ["Cocoa <0xbbc@0xbbc.com>"]
edition = "2018"
links = "libwebp"
build = "build.rs"

[dependencies]
crossbeam-channel = "0.4"
getopts = "0.2"
glob = "0"
hyper = "0.13"
image = "0"
libc = "0.2"
num_cpus = "1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
threadpool = "1"
tokio = { version = "0.2", features = ["sync", "fs", "macros"] }
walkdir = "2"

[profile.release]
opt-level = 'z'
lto = true
